interaction planetes projets pt1 fini et design contact

--- a/portfolio-frontend-public/src/assets/scss/_variables.scss
+++ b/portfolio-frontend-public/src/assets/scss/_variables.scss
@@ -4,12 +4,12 @@ $font-primary: "Inconsolata", monospace;
 //light
 $light: #bbc5cf;
 $text-light: black;
-$primary-light: #aba9bc;
+$primary-light: #868f99;
 
 //dark
 $dark: #10183f;
 $text-dark: white;
-$primary-dark: #777586;
+$primary-dark: #41426f;
 
 // responsive
 $mobile: 640px;   // sm
