--- a/portfolio-frontend-public/src/assets/scss/_variables.scss
+++ b/portfolio-frontend-public/src/assets/scss/_variables.scss
@@ -2,9 +2,9 @@
 $font-primary: "Inconsolata", monospace;
 
 //light
-$light: #bbc5cf;
+$light: #9db8d2;
 $text-light: black;
-$primary-light: #868f99;
+$primary-light: #637c98;
 
 //dark
 $dark: #10183f;
