--- a/portfolio-frontend-public/src/assets/scss/main.scss
+++ b/portfolio-frontend-public/src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import './variables.scss';
 @import './menuburger.scss';
 @import './contact.scss';
+@import './competences.scss';
 
 @tailwind base;
 @tailwind components;
