--- a/portfolio-frontend-public/src/assets/scss/_variables.scss
+++ b/portfolio-frontend-public/src/assets/scss/_variables.scss
@@ -4,12 +4,12 @@ $font-primary: "Inconsolata", monospace;
 //light
 $light: #9db8d2;
 $text-light: black;
-$primary-light: #637c98;
+$primary-light: #6273a3;
 
 //dark
 $dark: #10183f;
 $text-dark: white;
-$primary-dark: #41426f;
+$primary-dark: #3e3f86;
 
 // responsive
 $mobile: 640px;   // sm
